--- a/c4d-vscode-extension/.vscode/extensions.json
+++ b/c4d-vscode-extension/.vscode/extensions.json
@@ -2,6 +2,7 @@
 	// See http://go.microsoft.com/fwlink/?LinkId=827846
 	// for the documentation about the extensions.json format
 	"recommendations": [
-		"dbaeumer.vscode-eslint"
+		"vincent-ledu.adr-tools",
+		"systemticks.c4-dsl-extension"
 	]
 }
