--- a/research/mxgraph-demo/package.json
+++ b/research/mxgraph-demo/package.json
@@ -34,11 +34,19 @@
     "fs-extra": "10.0.0",
     "jquery": "3.5.1",
     "json2xml": "^0.1.3",
-    "lite-server": "2.6.1",
     "moment": "^2.29.4",
     "mxgraph": "4.2.2",
     "pako": "^2.1.0",
     "toastify-js": "^1.12.0",
     "xml-js": "^1.6.11"
+  },
+  "devDependencies": {
+    "grunt": "^1.5.3",
+    "grunt-contrib-concat": "^2.1.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-webpack": "^5.0.0",
+    "lite-server": "^2.6.1",
+    "load-grunt-tasks": "^5.1.0",
+    "webpack": "^5.75.0"
   }
 }
