--- a/research/mxgraph-demo/bs-config.json
+++ b/research/mxgraph-demo/bs-config.json
@@ -7,7 +7,8 @@
     "routes": {
       "/libs": "node_modules",
       "/mxgraph.config.js": "mxgraph.config.js",
-      "/c4ke.config.js": "c4ke.config.js"
+      "/c4ke.config.js": "c4ke.config.js",
+      "/c4ke.view.config.js": "c4ke.view.config.js"
     }
   }
 }
