add sidebar style

--- a/research/mxgraph-demo/package.json
+++ b/research/mxgraph-demo/package.json
@@ -29,11 +29,16 @@
   "dependencies": {
     "@convergence/color-assigner": "0.3.0",
     "@convergence/convergence": "^1.0.0-rc.11",
+    "@convergence/html-text-collab-ext": "^0.3.1",
     "@convergence/mxgraph-adapter": "0.3.0",
     "@fortawesome/fontawesome-free": "5.15.3",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
+    "easymde": "^2.18.0",
     "fs-extra": "10.0.0",
     "jquery": "3.5.1",
     "json2xml": "^0.1.3",
+    "minidenticons": "^4.2.0",
     "moment": "^2.29.4",
     "mxgraph": "4.2.2",
     "pako": "^2.1.0",
