--- a/research/mxgraph-demo/package.json
+++ b/research/mxgraph-demo/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "easymde": "^2.18.0",
+    "feather-icons": "^4.29.1",
     "fs-extra": "10.0.0",
     "jquery": "3.5.1",
     "json2xml": "^0.1.3",
